# task_03_prac

./: .gitignore  CMakeLists.txt  Instancing.depend  Instancing.layout  Makefile  README.md  main.cpp
Simple OpenGL Image Library/: Makefile
Simple OpenGL Image Library/projects/codeblocks/: Makefile
Utility/: Makefile
Utility/include/GL/: Camera.h  Mesh.h  Texture.h
Utility/include/VM/: vec2.h
Utility/src/: Camera.cpp  Mesh.cpp  Texture.cpp  vec2.cpp  vec3.cpp
include/: grass.h  ground.h  object.h  scene.h  serializer.h  skybox.h  wind.h
mesh/: grass.uv  rock.mtl  tree.mtl
shaders/: grass.frag  grass.vert  ground.frag  ground.vert  leaves.frag  leaves.vert  rock.frag  rock.vert  skybox.frag  skybox.vert  tree.frag
src/: grass.cpp  ground.cpp  main.cpp  object.cpp  scene.cpp  serializer.cpp  skybox.cpp  wind.cpp
